--- a/pom.xml
+++ b/pom.xml
@@ -63,9 +63,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.sparkjava</groupId>
-			<artifactId>spark-core</artifactId>
-			<version>2.1</version>
+    			<groupId>org.apache.spark</groupId>
+    			<artifactId>spark-core_2.12</artifactId>
+    			<version>2.4.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
